antlr_output_python/CminusParser.py
# Generated from Cminus.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class CminusParser ( Parser ):

    grammarFileName = "Cminus.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'['", "']'", "'int'", "'void'", 
                     "'('", "')'", "','", "'{'", "'}'", "'if'", "'else'", 
                     "'while'", "'return'", "'='", "'<='", "'<'", "'>'", 
                     "'>='", "'=='", "'!='", "'+'", "'-'", "'*'", "'/'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "COMMENT", "ID", "NUMBER", 
                      "WS" ]

    RULE_program = 0
    RULE_declaration_list = 1
    RULE_declaration = 2
    RULE_var_declaration = 3
    RULE_type_specifier = 4
    RULE_fun_declaration = 5
    RULE_params = 6
    RULE_param_list = 7
    RULE_param = 8
    RULE_compound_statement = 9
    RULE_local_declarations = 10
    RULE_statement_list = 11
    RULE_statement = 12
    RULE_expression_statement = 13
    RULE_selection_statement = 14
    RULE_iteration_statement = 15
    RULE_return_statemet = 16
    RULE_expression = 17
    RULE_var = 18
    RULE_simple_expression = 19
    RULE_relop = 20
    RULE_additive_expression = 21
    RULE_addop = 22
    RULE_term = 23
    RULE_mulop = 24
    RULE_factor = 25
    RULE_call = 26
    RULE_args = 27
    RULE_arg_list = 28

    ruleNames =  [ "program", "declaration_list", "declaration", "var_declaration", 
                   "type_specifier", "fun_declaration", "params", "param_list", 
                   "param", "compound_statement", "local_declarations", 
                   "statement_list", "statement", "expression_statement", 
                   "selection_statement", "iteration_statement", "return_statemet", 
                   "expression", "var", "simple_expression", "relop", "additive_expression", 
                   "addop", "term", "mulop", "factor", "call", "args", "arg_list" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    COMMENT=26
    ID=27
    NUMBER=28
    WS=29

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration_list(self):
            return self.getTypedRuleContext(CminusParser.Declaration_listContext,0)


        def getRuleIndex(self):
            return CminusParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = CminusParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 58
            self.declaration_list(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Declaration_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(CminusParser.DeclarationContext,0)


        def declaration_list(self):
            return self.getTypedRuleContext(CminusParser.Declaration_listContext,0)


        def getRuleIndex(self):
            return CminusParser.RULE_declaration_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration_list" ):
                listener.enterDeclaration_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration_list" ):
                listener.exitDeclaration_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration_list" ):
                return visitor.visitDeclaration_list(self)
            else:
                return visitor.visitChildren(self)



    def declaration_list(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CminusParser.Declaration_listContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_declaration_list, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.declaration()
            self._ctx.stop = self._input.LT(-1)
            self.state = 67
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = CminusParser.Declaration_listContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_declaration_list)
                    self.state = 63
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 64
                    self.declaration() 
                self.state = 69
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declaration(self):
            return self.getTypedRuleContext(CminusParser.Var_declarationContext,0)


        def fun_declaration(self):
            return self.getTypedRuleContext(CminusParser.Fun_declarationContext,0)


        def getRuleIndex(self):
            return CminusParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = CminusParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaration)
        try:
            self.state = 72
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 70
                self.var_declaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.fun_declaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Var_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_specifier(self):
            return self.getTypedRuleContext(CminusParser.Type_specifierContext,0)


        def ID(self):
            return self.getToken(CminusParser.ID, 0)

        def NUMBER(self):
            return self.getToken(CminusParser.NUMBER, 0)

        def getRuleIndex(self):
            return CminusParser.RULE_var_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_declaration" ):
                listener.enterVar_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_declaration" ):
                listener.exitVar_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar_declaration" ):
                return visitor.visitVar_declaration(self)
            else:
                return visitor.visitChildren(self)




    def var_declaration(self):

        localctx = CminusParser.Var_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_var_declaration)
        try:
            self.state = 85
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 74
                self.type_specifier()
                self.state = 75
                self.match(CminusParser.ID)
                self.state = 76
                self.match(CminusParser.T__0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 78
                self.type_specifier()
                self.state = 79
                self.match(CminusParser.ID)
                self.state = 80
                self.match(CminusParser.T__1)
                self.state = 81
                self.match(CminusParser.NUMBER)
                self.state = 82
                self.match(CminusParser.T__2)
                self.state = 83
                self.match(CminusParser.T__0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Type_specifierContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return CminusParser.RULE_type_specifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType_specifier" ):
                listener.enterType_specifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType_specifier" ):
                listener.exitType_specifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType_specifier" ):
                return visitor.visitType_specifier(self)
            else:
                return visitor.visitChildren(self)




    def type_specifier(self):

        localctx = CminusParser.Type_specifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_type_specifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            _la = self._input.LA(1)
            if not(_la==CminusParser.T__3 or _la==CminusParser.T__4):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Fun_declarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_specifier(self):
            return self.getTypedRuleContext(CminusParser.Type_specifierContext,0)


        def ID(self):
            return self.getToken(CminusParser.ID, 0)

        def params(self):
            return self.getTypedRuleContext(CminusParser.ParamsContext,0)


        def compound_statement(self):
            return self.getTypedRuleContext(CminusParser.Compound_statementContext,0)


        def getRuleIndex(self):
            return CminusParser.RULE_fun_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFun_declaration" ):
                listener.enterFun_declaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFun_declaration" ):
                listener.exitFun_declaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFun_declaration" ):
                return visitor.visitFun_declaration(self)
            else:
                return visitor.visitChildren(self)




    def fun_declaration(self):

        localctx = CminusParser.Fun_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_fun_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.type_specifier()
            self.state = 90
            self.match(CminusParser.ID)
            self.state = 91
            self.match(CminusParser.T__5)
            self.state = 92
            self.params()
            self.state = 93
            self.match(CminusParser.T__6)
            self.state = 94
            self.compound_statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ParamsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param_list(self):
            return self.getTypedRuleContext(CminusParser.Param_listContext,0)


        def getRuleIndex(self):
            return CminusParser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams" ):
                listener.exitParams(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = CminusParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_params)
        try:
            self.state = 98
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.param_list(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.match(CminusParser.T__4)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Param_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(CminusParser.ParamContext,0)


        def param_list(self):
            return self.getTypedRuleContext(CminusParser.Param_listContext,0)


        def getRuleIndex(self):
            return CminusParser.RULE_param_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_list" ):
                listener.enterParam_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_list" ):
                listener.exitParam_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam_list" ):
                return visitor.visitParam_list(self)
            else:
                return visitor.visitChildren(self)



    def param_list(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CminusParser.Param_listContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_param_list, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.param()
            self._ctx.stop = self._input.LT(-1)
            self.state = 108
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = CminusParser.Param_listContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_param_list)
                    self.state = 103
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 104
                    self.match(CminusParser.T__7)
                    self.state = 105
                    self.param() 
                self.state = 110
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx

    class ParamContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_specifier(self):
            return self.getTypedRuleContext(CminusParser.Type_specifierContext,0)


        def ID(self):
            return self.getToken(CminusParser.ID, 0)

        def getRuleIndex(self):
            return CminusParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = CminusParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_param)
        try:
            self.state = 119
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.type_specifier()
                self.state = 112
                self.match(CminusParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.type_specifier()
                self.state = 115
                self.match(CminusParser.ID)
                self.state = 116
                self.match(CminusParser.T__1)
                self.state = 117
                self.match(CminusParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Compound_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def local_declarations(self):
            return self.getTypedRuleContext(CminusParser.Local_declarationsContext,0)


        def statement_list(self):
            return self.getTypedRuleContext(CminusParser.Statement_listContext,0)


        def getRuleIndex(self):
            return CminusParser.RULE_compound_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompound_statement" ):
                listener.enterCompound_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompound_statement" ):
                listener.exitCompound_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompound_statement" ):
                return visitor.visitCompound_statement(self)
            else:
                return visitor.visitChildren(self)




    def compound_statement(self):

        localctx = CminusParser.Compound_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_compound_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(CminusParser.T__8)
            self.state = 122
            self.local_declarations()
            self.state = 123
            self.statement_list()
            self.state = 124
            self.match(CminusParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Local_declarationsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CminusParser.Var_declarationContext)
            else:
                return self.getTypedRuleContext(CminusParser.Var_declarationContext,i)


        def getRuleIndex(self):
            return CminusParser.RULE_local_declarations

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLocal_declarations" ):
                listener.enterLocal_declarations(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLocal_declarations" ):
                listener.exitLocal_declarations(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLocal_declarations" ):
                return visitor.visitLocal_declarations(self)
            else:
                return visitor.visitChildren(self)




    def local_declarations(self):

        localctx = CminusParser.Local_declarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_local_declarations)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==CminusParser.T__3 or _la==CminusParser.T__4:
                self.state = 126
                self.var_declaration()
                self.state = 131
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Statement_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CminusParser.StatementContext)
            else:
                return self.getTypedRuleContext(CminusParser.StatementContext,i)


        def getRuleIndex(self):
            return CminusParser.RULE_statement_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement_list" ):
                listener.enterStatement_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement_list" ):
                listener.exitStatement_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement_list" ):
                return visitor.visitStatement_list(self)
            else:
                return visitor.visitChildren(self)




    def statement_list(self):

        localctx = CminusParser.Statement_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_statement_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CminusParser.T__0) | (1 << CminusParser.T__5) | (1 << CminusParser.T__8) | (1 << CminusParser.T__10) | (1 << CminusParser.T__12) | (1 << CminusParser.T__13) | (1 << CminusParser.ID) | (1 << CminusParser.NUMBER))) != 0):
                self.state = 132
                self.statement()
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression_statement(self):
            return self.getTypedRuleContext(CminusParser.Expression_statementContext,0)


        def compound_statement(self):
            return self.getTypedRuleContext(CminusParser.Compound_statementContext,0)


        def selection_statement(self):
            return self.getTypedRuleContext(CminusParser.Selection_statementContext,0)


        def iteration_statement(self):
            return self.getTypedRuleContext(CminusParser.Iteration_statementContext,0)


        def return_statemet(self):
            return self.getTypedRuleContext(CminusParser.Return_statemetContext,0)


        def getRuleIndex(self):
            return CminusParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = CminusParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_statement)
        try:
            self.state = 143
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [CminusParser.T__0, CminusParser.T__5, CminusParser.ID, CminusParser.NUMBER]:
                self.enterOuterAlt(localctx, 1)
                self.state = 138
                self.expression_statement()
                pass
            elif token in [CminusParser.T__8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 139
                self.compound_statement()
                pass
            elif token in [CminusParser.T__10]:
                self.enterOuterAlt(localctx, 3)
                self.state = 140
                self.selection_statement()
                pass
            elif token in [CminusParser.T__12]:
                self.enterOuterAlt(localctx, 4)
                self.state = 141
                self.iteration_statement()
                pass
            elif token in [CminusParser.T__13]:
                self.enterOuterAlt(localctx, 5)
                self.state = 142
                self.return_statemet()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Expression_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(CminusParser.ExpressionContext,0)


        def getRuleIndex(self):
            return CminusParser.RULE_expression_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression_statement" ):
                listener.enterExpression_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression_statement" ):
                listener.exitExpression_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression_statement" ):
                return visitor.visitExpression_statement(self)
            else:
                return visitor.visitChildren(self)




    def expression_statement(self):

        localctx = CminusParser.Expression_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_expression_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << CminusParser.T__5) | (1 << CminusParser.ID) | (1 << CminusParser.NUMBER))) != 0):
                self.state = 145
                self.expression()


            self.state = 148
            self.match(CminusParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Selection_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(CminusParser.ExpressionContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CminusParser.StatementContext)
            else:
                return self.getTypedRuleContext(CminusParser.StatementContext,i)


        def getRuleIndex(self):
            return CminusParser.RULE_selection_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelection_statement" ):
                listener.enterSelection_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelection_statement" ):
                listener.exitSelection_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelection_statement" ):
                return visitor.visitSelection_statement(self)
            else:
                return visitor.visitChildren(self)




    def selection_statement(self):

        localctx = CminusParser.Selection_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_selection_statement)
        try:
            self.state = 164
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 150
                self.match(CminusParser.T__10)
                self.state = 151
                self.match(CminusParser.T__5)
                self.state = 152
                self.expression()
                self.state = 153
                self.match(CminusParser.T__6)
                self.state = 154
                self.statement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 156
                self.match(CminusParser.T__10)
                self.state = 157
                self.match(CminusParser.T__5)
                self.state = 158
                self.expression()
                self.state = 159
                self.match(CminusParser.T__6)
                self.state = 160
                self.statement()
                self.state = 161
                self.match(CminusParser.T__11)
                self.state = 162
                self.statement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Iteration_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(CminusParser.ExpressionContext,0)


        def statement(self):
            return self.getTypedRuleContext(CminusParser.StatementContext,0)


        def getRuleIndex(self):
            return CminusParser.RULE_iteration_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIteration_statement" ):
                listener.enterIteration_statement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIteration_statement" ):
                listener.exitIteration_statement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIteration_statement" ):
                return visitor.visitIteration_statement(self)
            else:
                return visitor.visitChildren(self)




    def iteration_statement(self):

        localctx = CminusParser.Iteration_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_iteration_statement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.match(CminusParser.T__12)
            self.state = 167
            self.match(CminusParser.T__5)
            self.state = 168
            self.expression()
            self.state = 169
            self.match(CminusParser.T__6)
            self.state = 170
            self.statement()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Return_statemetContext(ParserRuleContext):
